// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GlobalActions sample snapshot testing Global Section Actions 1`] = `
<div>
  <div
    class="HvGlobalActions-root-83"
  >
    <div
      class="HvGlobalActions-wrapper-87 HvGlobalActions-globalSectionArea-90"
    >
      <h2
        class="HvGlobalActions-name-92 HvTypography-root-94 HvTypography-sectionTitle-105"
      >
        Section Title
      </h2>
      <div
        class="HvGlobalActions-actions-93"
      >
        <button
          class="HvButton-root-116 MuiButton-root MuiButton-contained HvButton-primary-118 MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root HvButton-primarySVG-128 css-1gsq1hj-MuiButtonBase-root-MuiButton-root"
          tabindex="0"
          type="button"
        >
          Primary
        </button>
        <div
          class="HvBaseDropdown-root-139 HvDropDownMenu-root-133"
        >
          <div
            aria-expanded="false"
            aria-haspopup="menu"
            aria-label="dropdownMenu-Items"
            class="HvDropDownMenu-container-134 HvBaseDropdown-anchor-140"
            id="dropdownItem-5"
            tabindex="-1"
          >
            <button
              aria-expanded="false"
              aria-label="Dropdown menu"
              class="HvButton-root-116 MuiButton-root MuiButton-text HvButton-ghost-123 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-136 HvButton-icon-117 HvButton-ghostSVG-130 css-fsero8-MuiButtonBase-root-MuiButton-root"
              id="dropdownItem-5-icon-button"
              tabindex="0"
              type="button"
            >
              <div
                class="HvIconBase-root-159 HvIconBase-s-161"
                name="MoreOptionsVertical"
              >
                <svg
                  focusable="false"
                  height="16"
                  viewBox="0 0 16 16"
                  width="16"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    class="color0"
                    d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                    fill="#414141"
                  />
                </svg>
              </div>
            </button>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`GlobalActions sample snapshot testing Main 1`] = `
<div>
  <div
    class="HvContainer-root-1 MuiContainer-root MuiContainer-maxWidthXl css-1d4akpq-MuiContainer-root"
  >
    <div
      class="HvGlobalActions-root-2 HvGlobalActions-positionSticky-3 HvGlobalActions-global-5"
    >
      <div
        class="HvGlobalActions-wrapper-6 HvGlobalActions-globalWrapperComplement-7"
      >
        <div
          class="HvGlobalActions-backButton-10"
        >
          <button
            aria-label="Back"
            class="HvButton-root-13 MuiButton-root MuiButton-text HvButton-ghost-20 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvButton-icon-14 HvButton-ghostSVG-27 css-fsero8-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            <div
              class="HvIconBase-root-30 HvIconBase-s-32"
              name="Backwards"
            >
              <svg
                focusable="false"
                height="16"
                viewBox="0 0 16 16"
                width="16"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  class="color0"
                  d="M11.30863 15.5L4 8 11.30863.5 12 1.30536 5.38272 8 12 14.79529z"
                  fill="#414141"
                />
              </svg>
            </div>
          </button>
        </div>
        <h1
          class="HvGlobalActions-name-11 HvTypography-root-35 HvTypography-xsTitle-44"
        >
          Detail Page Title
        </h1>
        <div
          class="HvGlobalActions-actions-12"
        >
          <button
            class="HvButton-root-13 MuiButton-root MuiButton-contained HvButton-primary-15 MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButtonBase-root HvButton-primarySVG-25 css-1gsq1hj-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Approve & Share
          </button>
          <button
            class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
            tabindex="0"
            type="button"
          >
            Reset
          </button>
          <div
            class="HvBaseDropdown-root-63 HvDropDownMenu-root-57"
          >
            <div
              aria-expanded="false"
              aria-haspopup="menu"
              aria-label="dropdownMenu-Items"
              class="HvDropDownMenu-container-58 HvBaseDropdown-anchor-64"
              id="dropdownItem-1"
              tabindex="-1"
            >
              <button
                aria-expanded="false"
                aria-label="Dropdown menu"
                class="HvButton-root-13 MuiButton-root MuiButton-text HvButton-ghost-20 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-60 HvButton-icon-14 HvButton-ghostSVG-27 css-fsero8-MuiButtonBase-root-MuiButton-root"
                id="dropdownItem-1-icon-button"
                tabindex="0"
                type="button"
              >
                <div
                  class="HvIconBase-root-30 HvIconBase-s-32"
                  name="MoreOptionsVertical"
                >
                  <svg
                    focusable="false"
                    height="16"
                    viewBox="0 0 16 16"
                    width="16"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      class="color0"
                      d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                      fill="#414141"
                    />
                  </svg>
                </div>
              </button>
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      style="padding-bottom: 60px;"
    >
      <div
        class="HvGlobalActions-root-2"
      >
        <div
          class="HvGlobalActions-wrapper-6 HvGlobalActions-globalSectionArea-9"
        >
          <h2
            class="HvGlobalActions-name-11 HvTypography-root-35 HvTypography-sectionTitle-46"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions-12"
          >
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root-63 HvDropDownMenu-root-57"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container-58 HvBaseDropdown-anchor-64"
                id="dropdownItem-2"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="HvButton-root-13 MuiButton-root MuiButton-text HvButton-ghost-20 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-60 HvButton-icon-14 HvButton-ghostSVG-27 css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-2-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root-30 HvIconBase-s-32"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-bottom: 60px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <div
        class="HvGlobalActions-root-2"
      >
        <div
          class="HvGlobalActions-wrapper-6 HvGlobalActions-globalSectionArea-9"
        >
          <h2
            class="HvGlobalActions-name-11 HvTypography-root-35 HvTypography-sectionTitle-46"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions-12"
          >
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root-63 HvDropDownMenu-root-57"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container-58 HvBaseDropdown-anchor-64"
                id="dropdownItem-3"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="HvButton-root-13 MuiButton-root MuiButton-text HvButton-ghost-20 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-60 HvButton-icon-14 HvButton-ghostSVG-27 css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-3-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root-30 HvIconBase-s-32"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-bottom: 60px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <div
        class="HvGlobalActions-root-2"
      >
        <div
          class="HvGlobalActions-wrapper-6 HvGlobalActions-globalSectionArea-9"
        >
          <h2
            class="HvGlobalActions-name-11 HvTypography-root-35 HvTypography-sectionTitle-46"
          >
            Section Title
          </h2>
          <div
            class="HvGlobalActions-actions-12"
          >
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Remove
            </button>
            <button
              class="HvButton-root-13 MuiButton-root MuiButton-outlined HvButton-secondary-18 MuiButton-outlinedPrimary MuiButton-sizeMedium MuiButton-outlinedSizeMedium MuiButtonBase-root HvButton-secondarySVG-26 css-ci0f3d-MuiButtonBase-root-MuiButton-root"
              tabindex="0"
              type="button"
            >
              Share
            </button>
            <div
              class="HvBaseDropdown-root-63 HvDropDownMenu-root-57"
            >
              <div
                aria-expanded="false"
                aria-haspopup="menu"
                aria-label="dropdownMenu-Items"
                class="HvDropDownMenu-container-58 HvBaseDropdown-anchor-64"
                id="dropdownItem-4"
                tabindex="-1"
              >
                <button
                  aria-expanded="false"
                  aria-label="Dropdown menu"
                  class="HvButton-root-13 MuiButton-root MuiButton-text HvButton-ghost-20 MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButtonBase-root HvDropDownMenu-icon-60 HvButton-icon-14 HvButton-ghostSVG-27 css-fsero8-MuiButtonBase-root-MuiButton-root"
                  id="dropdownItem-4-icon-button"
                  tabindex="0"
                  type="button"
                >
                  <div
                    class="HvIconBase-root-30 HvIconBase-s-32"
                    name="MoreOptionsVertical"
                  >
                    <svg
                      focusable="false"
                      height="16"
                      viewBox="0 0 16 16"
                      width="16"
                      xmlns="http://www.w3.org/2000/svg"
                    >
                      <path
                        class="color0"
                        d="M7 6.9h2v2H7zM7 4h2V2H7zm0 10h2v-2H7z"
                        fill="#414141"
                      />
                    </svg>
                  </div>
                </button>
              </div>
            </div>
          </div>
        </div>
      </div>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-top: 20px; margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
      <p
        class="HvTypography-root-35 HvTypography-normalText-48"
        style="margin-bottom: 30px;"
      >
        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Purus faucibus ornare suspendisse sed nisi lacus sed. Tortor at risus viverra adipiscing at in tellus. Et netus et malesuada fames ac turpis. Sed blandit libero volutpat sed cras ornare arcu. Arcu odio ut sem nulla pharetra diam sit amet. Sagittis purus sit amet volutpat consequat mauris nunc congue. Sed vulputate mi sit amet mauris commodo quis imperdiet massa. Dictum varius duis at consectetur. Lorem sed risus ultricies tristique nulla aliquet enim tortor at. Turpis egestas maecenas pharetra convallis posuere morbi. Eget sit amet tellus cras adipiscing. Egestas erat imperdiet sed euismod nisi. Morbi tincidunt augue interdum velit euismod in pellentesque massa. At augue eget arcu dictum varius duis at. Tellus elementum sagittis vitae et. In est ante in nibh mauris cursus mattis. Faucibus nisl tincidunt eget nullam non. Cursus metus aliquam eleifend mi in nulla posuere.
      </p>
    </div>
  </div>
</div>
`;
